# sourcing-api

./: Makefile  README.md  build.bash  docker-compose.yaml  task_progress.md
config/: imaging_source.yaml  imaging_source_camera_info.yaml  presets.yml  xenics_camera.yaml  xenics_camera_info.yaml
dashboard_container/: package-lock.json
dashboard_container/src/app/: layout.tsx  page.tsx  types.ts
dashboard_container/src/app/components/: DeviceDetailsPanel.tsx  DeviceSelectorPanel.tsx  DeviceSubTaskbar.tsx  DiscoveryPanel.tsx  PresetsPanel.tsx  Settings.tsx  Sidebar.tsx  Taskbar.tsx  WebTerminal.tsx  ouster.tsx  replay.tsx
dashboard_container/src/app/handlers/: deviceHandlers.ts
ros_base_container/: Dockerfile  pyproject.toml
ros_base_container/requirements/: apt_requirements.txt  pip_requirements.txt
ros_container/: Dockerfile  build.bash  create_user.sh  init.sql  start_services.sh
ros_container/api/: package.xml
ros_container/api/src/: debug.py  genicam_xml.xml  main.py  print_device_attributes.py
sourcing-api/: .gitignore  .gitignore copy  Makefile  README copy.md  README.md  docker-compose.yaml
sourcing-api/bridge_container/: Dockerfile  entrypoint.sh
sourcing-api/config/: bag_checker_config.yaml  gige_192_168_2_102.yml  xenics_matrices.yml
sourcing-api/dashboard_container/: Dockerfile  next.config.ts  package-lock.json  package.json
sourcing-api/foxglove_container/: Dockerfile
sourcing-api/ros_base_container/: Dockerfile  pyproject.toml
sourcing-api/ros_base_container/requirements/: pip_requirements.txt  repos.yml
sourcing-api/ros_container/: Dockerfile  init.sql  install_aravis2.sh  start_services.sh
sourcing-api/sourcing-api/: Makefile  README.md  docker-compose.yaml  task_progress.md
sourcing-api/sourcing-api/calibrate/: calibrate.py  start_calibrate.sh
sourcing-api/sourcing-api/config/: ouster.yaml
sourcing-api/sourcing-api/dashboard_container/: Dockerfile  package.json
sourcing-api/sourcing-api/ros/: package.xml  setup.py
sourcing-api/sourcing-api/ros/services/srv/: __init__.py  getfeatures.srv
sourcing-api/sourcing-api/ros_base_container/: Dockerfile
sourcing-api/sourcing-api/ros_container/: Dockerfile  init.sql  start_services.sh
(+102 files in other folders)
